sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value estPlusPetit
    while((estPlusPetit(c:Int,(c-1):Int) && c>=1)){
           ^