sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for(i <- 1 to getNombreValeurs()-1){
    var c = i
    while((estPlusPetit(c:Int,(c-1):Int) && c>=1)){
      echange(c:Int,(c-1):Int)
      c = c-1
    }
  }
}